# reverse_tg

./: .dockerignore  Dockerfile  bot.py  dispatcher.py  docker-compose.yml  docker_compose.yml  generator.py  handlers.py  main.py  pyproject.toml  regulator.py
app/core/: bot.py  dispatcher.py  logger.py  settings.py
app/keyboards/: base.py  menu.py
app/managers/: generator.py  regulator.py  rules.py
app/middlewares/: message_logger.py
app/routers/: base.py  menu.py
app/types/: callbacks.py  rules.py
app/utils/: helpers.py
core/: bot.py  dispatcher.py  logger.py  settings.py
managers/: generator.py  regulator.py  rule.py  rules.py
routers/: base.py
rules/: __init__.py  birthdate.py  contact.py  kpk.py  kpk_slogan.py  reason.py  reversed_exorcism.py  rumors.py  slogan.py  support.py  test.py  you_fired.py
