[tool.poetry]
name = "reverse-tg"
version = "0.1.0"
description = ""
authors = ["GreenVVich <96542151+GreenVVich@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
aiogram = "^3.16.0"
pydantic-settings = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
